5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4427/executions/1716_2502.log
== SUBMITION (2019-06-06 16:34:55) 
-- CODE:
n=int(input("repeticao do termo: "))
soma = 0 #acumulada
i = 0 # contador
expoente = 0 #vc expoente
sinal = 1

while(i < n):
	d = ((2*i)+1)*(3**expoente)
	x =1 2**(1/2)*(sinal*1)/d
	soma += x
	i += 1
	sinal = sinal *(-1)
	expoente = expoente + 1
print(round(soma,8))
-- EXECUTION TIME:
1.00063
-- ERROR:
  File "/home/codebench/codes/1716/2502/main.py", line 9
    x =1 2**(1/2)*(sinal*1)/d
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:35:57) 
-- CODE:
n=int(input("repeticao do termo: "))
soma = 0 #acumulada
i = 0 # contador
expoente = 0 #vc expoente
sinal = 1

while(i<n):
	d = ((2*i)+1)*(3**expoente)
	x = 12**(1/2)*(sinal*1)/d
	soma += x
	i += 1
	sinal = sinal *(-1)
	expoente = expoente + 1
print(round(soma,8))
-- EXECUTION TIME:
0.745874
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
repeticao do termo: 3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
repeticao do termo: 3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
repeticao do termo: 3.14156872
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:36:35) 
-- CODE:
n=int(input("repeticao do termo: "))
soma = 0 #acumulada
i = 0 # contador
expoente = 0 #vc expoente
sinal = 1

while(i<n):
	d = ((2*i)+1)*(3**expoente)
	x = 12**(1/2)*(sinal*1)/d
	soma += x
	i += 1
	sinal = sinal *(-1)
	expoente = expoente + 1
print(round(soma, 8))
-- EXECUTION TIME:
0.876268
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
